@@ -1,10 +1,7 @@
-// AbstractLight.java
 package jmri.implementation;
 
 import java.util.ArrayList;
 import jmri.Light;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * Abstract class providing partial implementation of the the Light interface.
@@ -41,16 +38,9 @@ import org.slf4j.LoggerFactory;
  * @author	Dave Duchamp Copyright (C) 2004, 2010
  * @author	Ken Cameron Copyright (C) 2008
  * @author	Bob Jacobsen Copyright (C) 2008
- * @version $Revision$
  */
 public abstract class AbstractLight extends AbstractNamedBean
         implements Light, java.io.Serializable {
-
-    /**
-     *
-     */
-    private static final long serialVersionUID = -3863736856456563301L;
-    private final static Logger log = LoggerFactory.getLogger(AbstractLight.class);
 
     public AbstractLight(String systemName, String userName) {
         super(systemName.toUpperCase(), userName);
@@ -227,7 +217,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      *                                  current value of the minIntensity
      *                                  property
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
     public void setMaxIntensity(double intensity) {
         if (intensity < 0.0 || intensity > 1.0) {
             throw new IllegalArgumentException("Illegal intensity value: " + intensity);
@@ -240,7 +230,7 @@ public abstract class AbstractLight extends AbstractNamedBean
         mMaxIntensity = intensity;
 
         if (oldValue != intensity) {
-            firePropertyChange("MaxIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("MaxIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
@@ -268,7 +258,7 @@ public abstract class AbstractLight extends AbstractNamedBean
      *                                  current value of the maxIntensity
      *                                  property
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
     public void setMinIntensity(double intensity) {
         if (intensity < 0.0 || intensity > 1.0) {
             throw new IllegalArgumentException("Illegal intensity value: " + intensity);
@@ -281,7 +271,7 @@ public abstract class AbstractLight extends AbstractNamedBean
         mMinIntensity = intensity;
 
         if (oldValue != intensity) {
-            firePropertyChange("MinIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("MinIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
@@ -383,12 +373,12 @@ public abstract class AbstractLight extends AbstractNamedBean
      * Change the stored target intensity value and do notification, but don't
      * change anything in the hardware
      */
-    @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
+    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "FE_FLOATING_POINT_EQUALITY") // OK to compare floating point
     protected void notifyTargetIntensityChange(double intensity) {
         double oldValue = mCurrentIntensity;
         mCurrentIntensity = intensity;
         if (oldValue != intensity) {
-            firePropertyChange("TargetIntensity", new Double(oldValue), new Double(intensity));
+            firePropertyChange("TargetIntensity", Double.valueOf(oldValue), Double.valueOf(intensity));
         }
     }
 
@@ -461,6 +451,5 @@ public abstract class AbstractLight extends AbstractNamedBean
         return listCopy;
     }
 
+    private final static org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(AbstractLight.class);
 }
-
-/* @(#)AbstractLight.java */
